# fastapi-vue-admin

./: .gitignore  Pipfile  README.md  alembic.ini  db.py  feelgood.py  main.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 957dfdc030c2_init.py
app/: fadmin.py  hello.py  utils.py
app/api/: api.py  deps.py
app/crud/: crud_item.py  crud_user.py
app/db/: init_db.py  session.py
app/models/: perf.py
app/perf/: model.py
apps/api/: api.py  deps.py
apps/crud/: base.py  crud_item.py  crud_user.py
apps/db/: base.py  init_db.py
apps/models/: item.py  perf.py  user.py
apps/perf/: model.py
apps/user/: model.py  router.py  schema.py  view.py
backend/api/: api.py  apis.py  deps.py  items.py  login.py  utils.py
backend/crud/: __init__.py  base.py  crud_item.py  crud_user.py
backend/db/: base.py  init_db.py
backend/models/: item.py  perf.py  user.py
docs/test/: test_doc.py
fadmin/: hello.py  package.json  vue.config.js
fadmin/api/: api.py  deps.py
fadmin/crud/: base.py  crud_item.py  crud_user.py
fadmin/db/: base.py  init_db.py
fadmin/models/: item.py  perf.py  user.py
fadmin/src/: settings.js
fadmin_web/: package.json
fadmin_web/mock/: mock-server.js
fadmin_web/src/: settings.js
frontend/: .env.development  package.json  vue.config.js
model/: sql_model.py
router/: hello.py  user.py
setting/: config.py
sql_app/: crud.py  main.py  schemas.py
static/: feelgood.db  hello.html  index.html  style.css
templates/: hello.html
test/: test_api.py  test_requirements.txt
view/: user_view.py
(+39 files in other folders)
